
CruiseControl Release Notes - 2.6.2-dev

build loop
======================

CompositeBuilder
----------------------
* Fix validation error due to multiple calls to builder.validate() (CC-620). Reported by Tim Morrow

HttpFile
----------------------
* Fix bug where HttpFile didn't work with domain only (http://host.com) urls (CC-614). Patch by J. David Beutel

PhingBuilder
----------------------
* Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.

PluginRegistry
----------------------
* Remove deprecated method PluginRegistry.getDefaultProperties(String pluginName).

contrib
======================

distributed
----------------------
* Fix thread leak in DistributedMasterBuilder under high load (CC-625). Reported and Tested by Michael Van Hoff
* Fix doc error regarding Unicast Lookup URL settings
* Fix scripts to actually use jini.logging settings. Add readme notes for LAN's with broken hostname resolution.


CruiseControl Release Notes - 2.6.1

general
======================

* Fix cruisecontrol.bat in binary release for JAVA_HOME that has spaces (CC-554)
* Output PID to cc.pid in cruisecontrol.sh to fix init.d usage (CC-581).  Patch by Kevin Quigley.
* Binary distribution with embedded Jetty server now also uses Launcher (CC-586).  Patch by Mike Gilbode.
* Add Serializable to all classes required for RMI clients (CC-582).  Investigated by Frank Zoontjens.

contrib
======================

distributed
----------------------
* Updated to use Jini v2.1, rearranged tree, and added upgrade notes to README.html for mixed environments.

build loop
======================

AlienBrain
----------------------
* Add support for the property attribute

AlwaysBuild
----------------------
* Add support for property attribute

BuildStatus
----------------------
* Add support for the property attribute

ClearCase
----------------------
* Detect ClearCase UCM stream rebases as modifications (CC-464). Patch by Scott Coplin.

CompositeBuilder